...
    <string name="loading">Loading...</string>
    <string name="tambah_latihan">Tambah Latihan</string>
    <string name="huruf_alphabet">Huruf Alfabet</string>
    <string name="kata_benda">Kata Benda</string>
    <string name="url_gambar">URL Gambar</string>
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="profile_pengguna">Profile Pengguna</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="isi_pesan">Isi Pesan</string>
    <string name="title_pesan">Title Pesan</string>
    <string name="latihan">Latihan</string>
</resources>
